test/sema/imported-module-has-file-scope.delta
// RUN: %check_errors %not %delta -typecheck %s %p/inputs/imported-module-has-file-scope/second-file.delta

import foo;

// CHECK: second-file.delta:2:5: error: unknown identifier 'foo'
